styles : enhance the app UI

--- a/src/assets/styles/Clock.scss
+++ b/src/assets/styles/Clock.scss
@@ -4,6 +4,9 @@
 
     .clock__vector_map {
         background-color: transparent;
+        width: 90%;
+        margin: auto;
+        display: block;
     }
 
     svg {
