--- a/src/App.scss
+++ b/src/App.scss
@@ -33,6 +33,9 @@ body {
 	color: $color_1;
 	font-family: $font-family_1;
 }
+.toast-small-fs{
+	font-size: 12px;
+}
 #root {
 	min-width: 320px;
 	height: 100%;
